Can't remember what changes I've made since the last update. Just thought I'd update.

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -15,6 +15,21 @@
     </style>
 </head>
 <body>
-    <h1>Test</h1>
+    <div class="container">
+        <div class="jumbotron">
+            <h1>Friend Finder</h1>
+        </div>
+        <section>
+            <form id="form-data">
+                <div class="form-style">
+                    <label>Name (Required)</label>
+                    <input id="Name" Name="Name" type="text" class="form-control">
+                    <br>
+                    <label>Profile Picture URL (Required)</label>
+                    <input id="Image" name="ProfilePhoto" type="text" class="form-control">
+                </div>
+            </form>
+        </section>
+    </div>
 </body>
 </html>
