--- a/app/public/home.html
+++ b/app/public/home.html
@@ -21,12 +21,12 @@
             <h2 class="text-center">Complete the survery and find a new friend! Start by clicking the button below.</h2>
             <br>
             <div class="text-center">
-                    <a class="btn btn-primary btn-lg" href="survey.html" role="button">Take the Survey!</a>
+                    <a class="btn btn-primary btn-lg" href="/survey" role="button">Take the Survey!</a>
             </div>
         </div>
     <footer class="footer">
         <div class="container">
-            <p><a href="/api/friends">Friend API</a></p>
+            <p><a href="../api/friends">Friend API</a></p>
         </div>
     </footer>
     </div>
