--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -28,8 +28,181 @@
                     <label>Profile Picture URL (Required)</label>
                     <input id="Image" name="ProfilePhoto" type="text" class="form-control">
                 </div>
+                
+                <div class="survey-style">
+                    <h3>Question 1</h3>
+                    <h4>I would lie for you in the event of a police investigation.</h4>
+                    <select class="chosen-select" name="scores" id="Q1">
+                        <!-- Have the selection set to blank beforehand by having it first int he list. -->
+                        <option value=""></option>
+                        <option value="1">1 Strongly Disagree</option>
+                        <option value="2">2 </option>
+                        <option value="3">3 </option>
+                        <option value="4">4 </option>
+                        <option value="5">5 Strongly Agree</option>
+                    </select>
+
+                    <h3>Question 2</h3>
+                    <h4>If you caught somoene stealing how likely would you be to report it?</h4>
+                    <select class="chosen-select" name="scores" id="Q2">
+                        <!-- Have the selection set to blank beforehand by having it first int he list. -->
+                        <option value=""></option>
+                        <option value="1">1 Strongly Disagree</option>
+                        <option value="2">2 </option>
+                        <option value="3">3 </option>
+                        <option value="4">4 </option>
+                        <option value="5">5 Strongly Agree</option>
+                    </select>
+
+                    <h3>Question 3</h3>
+                    <h4>How likely agreeable are you to the concept of hostages?</h4>
+                    <select class="chosen-select" name="scores" id="Q3">
+                        <!-- Have the selection set to blank beforehand by having it first int he list. -->
+                        <option value=""></option>
+                        <option value="1">1 Strongly Disagree</option>
+                        <option value="2">2 </option>
+                        <option value="3">3 </option>
+                        <option value="4">4 </option>
+                        <option value="5">5 Strongly Agree</option>
+                    </select>
+
+                    <h3>Question 4</h3>
+                    <h4>I consider myself an expert safe-cracker.</h4>
+                    <select class="chosen-select" name="scores" id="Q4">
+                        <!-- Have the selection set to blank beforehand by having it first int he list. -->
+                        <option value=""></option>
+                        <option value="1">1 Strongly Disagree</option>
+                        <option value="2">2 </option>
+                        <option value="3">3 </option>
+                        <option value="4">4 </option>
+                        <option value="5">5 Strongly Agree</option>
+                    </select>
+
+                    <h3>Question 5</h3>
+                    <h4>You are distrustful of banks.</h4>
+                    <select class="chosen-select" name="scores" id="Q5">
+                        <!-- Have the selection set to blank beforehand by having it first int he list. -->
+                        <option value=""></option>
+                        <option value="1">1 Strongly Disagree</option>
+                        <option value="2">2 </option>
+                        <option value="3">3 </option>
+                        <option value="4">4 </option>
+                        <option value="5">5 Strongly Agree</option>
+                    </select>
+
+                    <h3>Question 6</h3>
+                    <h4>You can assemble a team.</h4>
+                    <select class="chosen-select" name="scores" id="Q6">
+                        <!-- Have the selection set to blank beforehand by having it first int he list. -->
+                        <option value=""></option>
+                        <option value="1">1 Strongly Disagree</option>
+                        <option value="2">2 </option>
+                        <option value="3">3 </option>
+                        <option value="4">4 </option>
+                        <option value="5">5 Strongly Agree</option>
+                    </select>
+
+                    <h3>Question 7</h3>
+                    <h4>Would you commit a murder for the sake of our goals?</h4>
+                    <select class="chosen-select" name="scores" id="Q7">
+                        <!-- Have the selection set to blank beforehand by having it first int he list. -->
+                        <option value=""></option>
+                        <option value="1">1 Strongly Disagree</option>
+                        <option value="2">2 </option>
+                        <option value="3">3 </option>
+                        <option value="4">4 </option>
+                        <option value="5">5 Strongly Agree</option>
+                    </select>
+
+                    <h3>Question 8</h3>
+                    <h4>You are capable of driving fast and safely.</h4>
+                    <select class="chosen-select" name="scores" id="Q8">
+                        <!-- Have the selection set to blank beforehand by having it first int he list. -->
+                        <option value=""></option>
+                        <option value="1">1 Strongly Disagree</option>
+                        <option value="2">2 </option>
+                        <option value="3">3 </option>
+                        <option value="4">4 </option>
+                        <option value="5">5 Strongly Agree</option>
+                    </select>
+
+                    <h3>Question 9</h3>
+                    <h4>If we were to split a large sum of money how inclined would you be to split it evenly?</h4>
+                    <select class="chosen-select" name="scores" id="Q9">
+                        <!-- Have the selection set to blank beforehand by having it first int he list. -->
+                        <option value=""></option>
+                        <option value="1">1 Strongly Disagree</option>
+                        <option value="2">2 </option>
+                        <option value="3">3 </option>
+                        <option value="4">4 </option>
+                        <option value="5">5 Strongly Agree</option>
+                    </select>
+
+                    <h3>Question 10</h3>
+                    <h4>If we were to split a large sum of money, but some of us were no longer a part of the group due to work related hazards, would you be inclined to give their family members the cut of their share?</h4>
+                    <select class="chosen-select" name="scores" id="Q10">
+                        <!-- Have the selection set to blank beforehand by having it first int he list. -->
+                        <option value=""></option>
+                        <option value="1">1 Strongly Disagree</option>
+                        <option value="2">2 </option>
+                        <option value="3">3 </option>
+                        <option value="4">4 </option>
+                        <option value="5">5 Strongly Agree</option>
+                    </select>
+                    <br>
+                    <br>
+                    <button type="submit" class="btn btn-primary btn-lg btn-block" id="submit"><i class="fa fa-check-circle" aria-hidden="true"></i>Submit</button>
+                    <hr>
+                </div>
             </form>
-        </section>
+        </section>   
     </div>
+    <div class ="container">
+        <footer class="footer">
+            <div class="container">
+                <p><a href="../api/friends">API Friends List</a></p>
+            </div>
+        </footer>
+    </div>
+    <script type="text/javascript">
+    $("#submit").on("click", function(){
+        function Validate(){
+            var Valid = true;
+            $(".form-control").each(function(){
+                if ($(this).val() === ""){
+                    Valid = false;
+                }
+            });
+            $(".chosen-select").each(function(){
+                if ($(this).val() === ""){
+                    Valid = false;
+                }
+            });
+            return Valid;
+        }
+        if (Validate()){
+            var UserData = {
+                name: $("#Name").val(),
+                photo: $("#Image").val(),
+                scores:[
+                    $("#Q1").val(),
+                    $("#Q2").val(),
+                    $("#Q3").val(),
+                    $("#Q4").val(),
+                    $("#Q5").val(),
+                    $("#Q6").val(),
+                    $("#Q7").val(),
+                    $("#Q8").val(),
+                    $("#Q9").val(),
+                    $("#Q10").val()
+                ]
+            };
+            var CurrentURL = window.location.origin;
+            $.post(CurrentURL + "/api/friends", UserData, function(data){
+                alert("working");
+            });
+        }
+    })
+    </script>
 </body>
 </html>
